# chat-capitu

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  Modelfile  README.en.md  README.es.md  README.md  app.py  config.py  ingest.py  postprocessing.py  pyproject.toml  query.py  requirements.txt  security.py  utils.py
.github/workflows/: ci.yml
data/: README.md
data/sample/: exemplo_capitulo.json  schema.json
docs/: ARQUITETURA.md  METODOLOGIA.md  SEGURANCA.md
tests/: test_postprocessing.py  test_security.py  test_utils.py
